# agent-debug

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
agent_debug/: __init__.py  cli.py  github_action.py  pipeline.py
agent_debug/adapters/: __init__.py  base.py  claude_adapter.py  langchain_adapter.py  openai_adapter.py
agent_debug/agents/: __init__.py  auto_fixer.py  base.py  code_fixer.py  code_validator.py  fix_generator.py  pattern_classifier.py  risk_scorer.py  root_cause_analyst.py  severity_estimator.py
agent_debug/capture/: __init__.py  context.py  decorators.py  patches.py  recorder.py
agent_debug/formatters/: __init__.py  markdown.py
agent_debug/models/: types.py
agent_debug/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
tests/fixtures/sample_traces/: claude_premature_stop.json  langchain_tool_misinterpretation.json  openai_wrong_tool.json
tests/test_adapters/: test_auto_parse.py  test_claude_adapter.py  test_langchain_adapter.py  test_openai_adapter.py
tests/test_agents/: test_base_agent.py
